# hannibals-army

./: .env.sample  .gitignore  README.md  config.py  digital-twin-config.sample.yml  linked_in_Article.md  main.py  pyproject.toml  simple_tui_planner.py  tui_trip_planner.py
db/: README.md  load_destinations.py
diagramms/: trip_planner_diagramm.drawio
docs/: ABOUT.md  AGENTS.md  DATA_DOCS.md  TECHNICAL.md  TRIP_PLANNER.md
mcp/: destination_server.py
src/: vector.py
src/hannibals_army/: crew.py  main.py
src/hannibals_army/config/: agents.yaml
utils/: clean_trip_destinations_data.py
