[project]
name = "hannibals-army"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "kagglehub[pandas-datasets]>=1.0.0",
    "langchain[anthropic,ollama]>=1.2.10",
    "langgraph>=1.0.10",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.4",
    "streamlit>=1.54.0",
]
